--- a/index.html
+++ b/index.html
@@ -1,9 +1,5 @@
 <!DOCTYPE HTML>
-<!--
-	Directive by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
+
 <html>
 	<head>
 		<title>Directive by HTML5 UP</title>
@@ -18,10 +14,10 @@
 		<!-- Header -->
 			<div id="header">
 				<span class="logo icon fa-paper-plane-o"></span>
-				<h1>Hi. This is Directive.</h1>
-				<p>A responsive HTML5 + CSS3 site template designed by <a href="http://html5up.net">HTML5 UP</a>
+				<h1>Hi. I am J. Keshav Bhupathy Vignesh</h1>
+				<p>I am a computer science UG student, currently pursuing my degree in VIT Chennai.
 				<br />
-				and released for free under the <a href="http://html5up.net/license">Creative Commons license</a>.</p>
+				Welcome to my website!</p>
 			</div>
 
 		<!-- Main -->
