--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html>
 	<head>
-		<title>Directive by HTML5 UP</title>
+		<title>J. Keshav Bhupathy Vignesh</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -24,11 +24,12 @@
 			<div id="main">
 
 				<header class="major container 75%">
-					<h2>We conduct experiments that
+					<h2>This is just a test page
 					<br />
-					may or may not seriously
+					I am currently working on the website
 					<br />
-					break the universe</h2>
+					In the meantime checkout <a href "https://github.com/jkeshav-bvignesh/my github repo"> my github repo!</a>
+					</h2>
 					<!--
 					<p>Tellus erat mauris ipsum fermentum<br />
 					etiam vivamus nunc nibh morbi.</p>
