--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE HTML>
-
 <html>
 	<head>
 		<title>J. Keshav Bhupathy Vignesh</title>
@@ -7,196 +6,117 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
 		<link rel="stylesheet" href="assets/css/main.css" />
-		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 	</head>
 	<body>
 
-		<!-- Sidebar -->
-			<section id="sidebar">
-				<div class="inner">
-					<nav>
-						<ul>
-							<li><a href="#intro">Welcome</a></li>
-							<li><a href="#one">Work</a></li>
-							<li><a href="#two">Projects</a></li>
-							<li><a href="#three">Get in touch</a></li>
-						</ul>
-					</nav>
-				</div>
+		<!-- Header -->
+			<section id="header">
+				<header>
+					<span class="image avatar"><img src="images/profilepic.png" alt="" /></span>
+					<h1 id="logo"><a href="#">J. Keshav Bhupathy Vignesh</a></h1>
+					</header>
+				<nav id="nav">
+					<ul>
+						<li><a href="#one" class="active">About</a></li>
+						<li><a href="#two">Things I Can Do</a></li>
+						<li><a href="#three">Some Of My Projects</a></li>
+						<li><a href="#four">Contact</a></li>
+						<li><a href="/CV/J_Keshav_Bhupathy_Vignesh_CV.pdf" download>Download my Resume/CV</a></li>
+					</ul>
+				</nav>
 			</section>
 
 		<!-- Wrapper -->
 			<div id="wrapper">
 
-				<!-- Intro -->
-					<section id="intro" class="wrapper style1 fullscreen fade-up">
-						<div class="inner">
-							<h1>Hello!</h1>
-							<p>I am J.Keshav Bhupathy Vignesh,a computer science UG student<br />
-							 currently pursuing my degree in VIT Chennai.
-<br/>
-This is just a test page. The full website will be up very soon.</p>
-							<ul class="actions">
-								<li><a href="#one" class="button scrolly">Learn more</a></li>
-							</ul>
-						</div>
-					</section>
+				<!-- Main -->
+					<div id="main">
 
-				<!-- One -->
-					<section id="one" class="wrapper style2 spotlights">
-						<section>
-							<a href="#" class="image"><img src="images/pic01.jpg" alt="" data-position="center center" /></a>
-							<div class="content">
-								<div class="inner">
-									<h2>Sed ipsum dolor</h2>
-									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
-									<ul class="actions">
-										<li><a href="#" class="button">Learn more</a></li>
+						<!-- One -->
+							<section id="one">
+								<div class="container">
+									<header class="major">
+										<h2>Hello! I'm Keshav</h2>
+										<p>Welcome to my page!<br />
+										</p>
+									</header>
+									<p>I am currently pursuing my <b>Bachelor's degree in Computer Science at Vellore Institute of Technology</b>. Being a Bio-maths student, the science behind computers was something very new to me. But over these past few years of my college life, I slowly started to understand and love it. <br> Other than computer science I am also passionate about many things such as magic, films and tv series and magic. I perform magic in my free time.</p>
+								</div>
+							</section>
+
+						<!-- Two -->
+							<section id="two">
+								<div class="container">
+									<h3>Things I Can Do</h3>
+									<ul class="feature-icons">
+										<li class="fa-code">Write all the code</li>
+										<li class="fa-magic">Perform magic</li>
+										<li class="fa-book">Read books and stuff</li>
+										<li class="fa-film">Watch Films and TV shows</li>
+										<li class="fa-pencil">Write movie and drama scripts</li>
+										<li class="fa-cut">Video editing and VFX</li>
 									</ul>
 								</div>
-							</div>
-						</section>
-						<section>
-							<a href="#" class="image"><img src="images/pic02.jpg" alt="" data-position="top center" /></a>
-							<div class="content">
-								<div class="inner">
-									<h2>Feugiat consequat</h2>
-									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
-									<ul class="actions">
-										<li><a href="#" class="button">Learn more</a></li>
-									</ul>
-								</div>
-							</div>
-						</section>
-						<section>
-							<a href="#" class="image"><img src="images/pic03.jpg" alt="" data-position="25% 25%" /></a>
-							<div class="content">
-								<div class="inner">
-									<h2>Ultricies aliquam</h2>
-									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
-									<ul class="actions">
-										<li><a href="#" class="button">Learn more</a></li>
-									</ul>
-								</div>
-							</div>
-						</section>
-					</section>
+							</section>
 
-				<!-- Two -->
-					<section id="two" class="wrapper style3 fade-up">
-						<div class="inner">
-							<h2>What we do</h2>
-							<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus, lacus eget hendrerit bibendum, urna est aliquam sem, sit amet imperdiet est velit quis lorem.</p>
-							<div class="features">
-								<section>
-									<span class="icon major fa-code"></span>
-									<h3>Lorem ipsum amet</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
-								</section>
-								<section>
-									<span class="icon major fa-lock"></span>
-									<h3>Aliquam sed nullam</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
-								</section>
-								<section>
-									<span class="icon major fa-cog"></span>
-									<h3>Sed erat ullam corper</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
-								</section>
-								<section>
-									<span class="icon major fa-desktop"></span>
-									<h3>Veroeros quis lorem</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
-								</section>
-								<section>
-									<span class="icon major fa-chain"></span>
-									<h3>Urna quis bibendum</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
-								</section>
-								<section>
-									<span class="icon major fa-diamond"></span>
-									<h3>Aliquam urna dapibus</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
-								</section>
-							</div>
-							<ul class="actions">
-								<li><a href="#" class="button">Learn more</a></li>
-							</ul>
-						</div>
-					</section>
+						<!-- Three -->
+							<section id="three">
+								<div class="container">
+									<h3>Some Of My Projects</h3>
+									<p>Making small projects is how I learn new stuff. This way is better</p>
+									<div class="features">
+										<article>
+											<a href="#" class="image"><img src="images/Temperature.jpg" alt="" /></a>
+											<div class="inner">
+												<h4>Intelligent Room temperature control and monitoring System</h4>
+												<p><i>Tools Used: Python, SQLite, Raspberry Pi, HTML5, JQuery, Bootstrap, Flask</i><br>
+This system learns the user preferences, using a neural network and then predicts the optimal
+temperature. The user can change the preferences and monitor the system statistics using a website from
+any location</p>
+											</div>
+										</article>
+										<article>
+											<a href="#" class="image"><img src="images/tamil.jpg" alt="" /></a>
+											<div class="inner">
+												<h4>Tamil Handwritten Character Recognition</h4>
+												<p><i>Tools Used: Python, TensorFlow, JQuery, Bootstrap, Flask</i><br>An interactive website wherein the user can write characters of the Tamil language. The website gives the recognition probabilities based on the character they have written using
+convolutional neural networks. The website can also be used to gather more training data from people who know the language</p>
+											</div>
+										</article>
+										<article>
+											<a href="#" class="image"><img src="images/network.jpg" alt="" /></a>
+											<div class="inner">
+												<h4>A game theoretical approach to solve Network Congestion</h4>
+												<p><i>Tools Used: C++, NS2</i><br>A game theoretical approach is proposed to resolve network congestion among competing flows. An optimal and fixed congestion window size is allocated to each node in the network at the end
+of the game.</p>
+											</div>
+										</article>
+									</div>
+								</div>
+							</section>
 
-				<!-- Three -->
-					<section id="three" class="wrapper style1 fade-up">
-						<div class="inner">
-							<h2>Get in touch</h2>
-							<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus, lacus eget hendrerit bibendum, urna est aliquam sem, sit amet imperdiet est velit quis lorem.</p>
-							<div class="split style1">
-								<section>
-									<form method="post" action="#">
-										<div class="field half first">
-											<label for="name">Name</label>
-											<input type="text" name="name" id="name" />
-										</div>
-										<div class="field half">
-											<label for="email">Email</label>
-											<input type="text" name="email" id="email" />
-										</div>
-										<div class="field">
-											<label for="message">Message</label>
-											<textarea name="message" id="message" rows="5"></textarea>
-										</div>
-										<ul class="actions">
-											<li><a href="" class="button submit">Send Message</a></li>
-										</ul>
-									</form>
-								</section>
-								<section>
-									<ul class="contact">
-										<li>
-											<h3>Address</h3>
-											<span>12345 Somewhere Road #654<br />
-											Nashville, TN 00000-0000<br />
-											USA</span>
-										</li>
-										<li>
-											<h3>Email</h3>
-											<a href="#">user@untitled.tld</a>
-										</li>
-										<li>
-											<h3>Phone</h3>
-											<span>(000) 000-0000</span>
-										</li>
-										<li>
-											<h3>Social</h3>
-											<ul class="icons">
-												<li><a href="#" class="fa-twitter"><span class="label">Twitter</span></a></li>
-												<li><a href="#" class="fa-facebook"><span class="label">Facebook</span></a></li>
-												<li><a href="#" class="fa-github"><span class="label">GitHub</span></a></li>
-												<li><a href="#" class="fa-instagram"><span class="label">Instagram</span></a></li>
-												<li><a href="#" class="fa-linkedin"><span class="label">LinkedIn</span></a></li>
-											</ul>
-										</li>
-									</ul>
-								</section>
-							</div>
+						<!-- Four -->
+							<section id="four">
+								<div class="container">
+									<h3>Contact Me</h3>
+									<p>Feel free to contact me anytime.<br>My email id: <b><a href="mailto:jkeshav.bvignesh@gmail.com">jkeshav.bvignesh@gmail.com</a></b><br> My Skype Id is also the same!<br><h4>You can also find me here <a href="https://www.facebook.com/people/Keshav-Vignesh/100005469136863" class="icon fa-facebook"><span class="label">Facebook</span></a>
+<a href="https://www.github.com/jkeshav-bvignesh" class="icon fa-github"><span class="label">Github</span></a>
+<a href="https://twitter.com/keshav_vignesh" class="icon fa-twitter"><span class="label">Twitter</span><a></h4></p>
+									
+					<section id="footer">
+						<div class="container">
+							<ul class="copyright">
+								<li>&copy; J Keshav Bhupathy Vignesh. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+
 						</div>
 					</section>
 
 			</div>
 
-		<!-- Footer -->
-			<footer id="footer" class="wrapper style1-alt">
-				<div class="inner">
-					<ul class="menu">
-						<li>&copy; J. Keshav Bhupathy Vignesh. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-					</ul>
-				</div>
-			</footer>
-
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrollex.min.js"></script>
+			<script src="assets/js/jquery.scrollzer.min.js"></script>
 			<script src="assets/js/jquery.scrolly.min.js"></script>
 			<script src="assets/js/skel.min.js"></script>
 			<script src="assets/js/util.js"></script>
