Corrected small errors

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 						<li><a href="#two">Things I Can Do</a></li>
 						<li><a href="#three">Some Of My Projects</a></li>
 						<li><a href="#four">Contact</a></li>
-						<li><a href="/CV/J_Keshav_Bhupathy_Vignesh_CV.pdf" download>Download my Resume/CV</a></li>
+						<li><a href="/CV/J_Keshav_Bhupathy_Vignesh_CV.pdf" download>Download my CV</a></li>
 					</ul>
 				</nav>
 			</section>
