Added few descriptions

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 							<section id="three">
 								<div class="container">
 									<h3>Some Of My Projects</h3>
-									<p>Making small projects is how I learn new stuff. This way is better</p>
+									<p> Experience is the best teacher. Learning new stuff is easier and more interesting when we build as we learn. These are a few such projects that I made.</p>
 									<div class="features">
 										<article>
 											<a href="#" class="image"><img src="images/Temperature.jpg" alt="" /></a>
