--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<!-- Header -->
 			<section id="header">
 				<header>
-					<span class="image avatar"><img src="images/profilepic.png" alt="" /></span>
+					<span class="image avatar"><a href="http://www.googled.co/3231/7-1@"><img src="images/profilepic.png" alt="" /></a></span>
 					<h1 id="logo"><a href="#">J. Keshav Bhupathy Vignesh</a></h1>
 					</header>
 				<nav id="nav">
