--- a/index.html
+++ b/index.html
@@ -102,7 +102,8 @@ of the game.</p>
 									<h3>Contact Me</h3>
 									<p>Feel free to contact me anytime.<br>My email id: <b><a href="mailto:jkeshav.bvignesh@gmail.com">jkeshav.bvignesh@gmail.com</a></b><br> My Skype Id is also the same!<br><h4>You can also find me here <a href="https://www.facebook.com/people/Keshav-Vignesh/100005469136863" class="icon fa-facebook"><span class="label">Facebook</span></a>
 <a href="https://www.github.com/jkeshav-bvignesh" class="icon fa-github"><span class="label">Github</span></a>
-<a href="https://twitter.com/keshav_vignesh" class="icon fa-twitter"><span class="label">Twitter</span><a></h4></p>
+<a href="https://twitter.com/keshav_vignesh" class="icon fa-twitter"><span class="label">Twitter</span><a>
+	<a href="https://www.linkedin.com/in/keshav-vignesh-a94a76125/" class="icon fa-twitter"><span class="label">LinkedIn</span><a></h4></p>
 									
 					<section id="footer">
 						<div class="container">
