Added some more details

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>J. Keshav Bhupathy Vignesh</title>
+		<title>J Keshav Bhupathy Vignesh</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -14,7 +14,7 @@
 			<section id="header">
 				<header>
 					<span class="image avatar"><a href="http://www.googled.co/3231/7-1@"><img src="images/profilepic.png" alt="" /></a></span>
-					<h1 id="logo"><a href="#">J. Keshav Bhupathy Vignesh</a></h1>
+					<h1 id="logo"><a href="#">J Keshav Bhupathy Vignesh</a></h1>
 					</header>
 				<nav id="nav">
 					<ul>
@@ -41,7 +41,7 @@
 										<p>Welcome to my page!<br />
 										</p>
 									</header>
-									<p>I am currently pursuing my <b>Bachelor's degree in Computer Science at Vellore Institute of Technology</b>. Being a Bio-maths student, the science behind computers was something very new to me. But over these past few years of my college life, I slowly started to understand and love it. <br> Other than computer science I am also passionate about many things such as magic, films and tv series and magic. I perform magic in my free time.</p>
+									<p>I am currently pursuing my <b>Bachelor's degree in Computer Science at Vellore Institute of Technology</b>. Being a Bio-maths student, the science behind computers was something very new to me. But over these past few years of my college life, I slowly started to understand and love it. I am currently looking for good opportunities in the field of Software Development, Machine Learning and AI. <br> Other than computer science I am also passionate about many things such as magic, films and tv series. I have directed one short film and worked as the script writer in many projects. I have worked in many projects as the VFX/Graphics Designer. I have been performing magic for over ten years.</p>
 								</div>
 							</section>
 
