--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 										<p>Welcome to my page!<br />
 										</p>
 									</header>
-									<p>I am currently pursuing my <b>Bachelor's degree in Computer Science at Vellore Institute of Technology</b>. Being a Bio-maths student, the science behind computers was something very new to me. But over these past few years of my college life, I slowly started to understand and love it. I am currently looking for good opportunities in the field of Software Development, Machine Learning and AI. <br> Other than computer science I am also passionate about many things such as magic, films and tv series. I have directed one short film and worked as the script writer in many projects. I have worked in many projects as the VFX/Graphics Designer. I have been performing magic for over ten years.</p>
+									<p align = "justify">I am currently pursuing my <b>Bachelor's degree in Computer Science at Vellore Institute of Technology</b>. Being a Bio-maths student, the science behind computers was something very new to me. But over these past few years of my college life, I slowly started to understand and love it. I am currently looking for good opportunities in the field of Software Development, Machine Learning and AI. <br> Other than computer science I am also passionate about many things such as magic, films and tv series. I have directed one short film and worked as the script writer in many projects. I have worked in many projects as the VFX/Graphics Designer. I have been performing magic for over ten years.</p>
 								</div>
 							</section>
 
@@ -70,7 +70,7 @@
 											<a href="#" class="image"><img src="images/Temperature.jpg" alt="" /></a>
 											<div class="inner">
 												<h4>Intelligent Room temperature control and monitoring System</h4>
-												<p><i>Tools Used: Python, SQLite, Raspberry Pi, HTML5, JQuery, Bootstrap, Flask</i><br>
+												<p align = "justify"><i>Tools Used: Python, SQLite, Raspberry Pi, HTML5, JQuery, Bootstrap, Flask</i><br>
 This system learns the user preferences, using a neural network and then predicts the optimal
 temperature. The user can change the preferences and monitor the system statistics using a website from
 any location</p>
@@ -80,7 +80,7 @@ any location</p>
 											<a href="#" class="image"><img src="images/tamil.jpg" alt="" /></a>
 											<div class="inner">
 												<h4>Tamil Handwritten Character Recognition</h4>
-												<p><i>Tools Used: Python, TensorFlow, JQuery, Bootstrap, Flask</i><br>An interactive website wherein the user can write characters of the Tamil language. The website gives the recognition probabilities based on the character they have written using
+												<p align = "justify"><i>Tools Used: Python, TensorFlow, JQuery, Bootstrap, Flask</i><br>An interactive website wherein the user can write characters of the Tamil language. The website gives the recognition probabilities based on the character they have written using
 convolutional neural networks. The website can also be used to gather more training data from people who know the language</p>
 											</div>
 										</article>
@@ -88,7 +88,7 @@ convolutional neural networks. The website can also be used to gather more train
 											<a href="#" class="image"><img src="images/network.jpg" alt="" /></a>
 											<div class="inner">
 												<h4>A game theoretical approach to solve Network Congestion</h4>
-												<p><i>Tools Used: C++, NS2</i><br>A game theoretical approach is proposed to resolve network congestion among competing flows. An optimal and fixed congestion window size is allocated to each node in the network at the end
+												<p align = "justify"><i>Tools Used: C++, NS2</i><br>A game theoretical approach is proposed to resolve network congestion among competing flows. An optimal and fixed congestion window size is allocated to each node in the network at the end
 of the game.</p>
 											</div>
 										</article>
