Corrected few errors

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 							<section id="three">
 								<div class="container">
 									<h3>Some Of My Projects</h3>
-									<p> Experience is the best teacher. Learning new stuff is easier and more interesting when we build as we learn. A few of my notable projects are described below. Please visit <href a = "https://www.github.com/jkeshav-bvignesh/"> my github profile</a> to see all my works.</p>
+									<p> Experience is the best teacher. Learning new stuff is easier and more interesting when we build as we learn. A few of my notable projects are described below. Please visit <a href = "https://www.github.com/jkeshav-bvignesh/"> my github profile</a> to see all my works.</p>
 									<div class="features">
 										<article>
 											<a href="#" class="image"><img src="images/Temperature.jpg" alt="" /></a>
