--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 										<p>Welcome to my page!<br />
 										</p>
 									</header>
-									<p align = "justify">I am currently pursuing my <b>Bachelor's degree in Computer Science at Vellore Institute of Technology</b>. Being a Bio-maths student, the science behind computers was something very new to me. But over these past few years of my college life, I slowly started to understand and love it. I am currently looking for good opportunities in the field of Software Development, Machine Learning and AI. <br> Other than computer science I am also passionate about many things such as magic, films and tv series. I have directed one short film and worked as the script writer in many projects. I have worked in many projects as the VFX/Graphics Designer. I have been performing magic for over ten years.</p>
+									<p align = "justify">I am currently pursuing my <b>Bachelor's degree</b> in <b>Computer Science at Vellore Institute of Technology</b>. Being a Bio-maths student, the science behind computers was very new to me. However, over the past few years of my college life, I gradually started to understand it and became passionate towards the subject. I am currently looking for good opportunities in the fields of Software Development, Machine Learning and AI which would help me improve my skills to an advanced level so that it can be used in solving real world problems.<br> Other than computer science I am also passionate about performing magic and being involved in films. I have been performing magic for over ten years. I directed one short film and have worked as the script writer in many individual projects. I have also worked as a VFX/Graphics Designer and am proficient in skills involving video editing.</p>
 								</div>
 							</section>
 
@@ -50,12 +50,12 @@
 								<div class="container">
 									<h3>Things I Can Do</h3>
 									<ul class="feature-icons">
-										<li class="fa-code">Write all the code</li>
+										<li class="fa-code">Write code</li>
 										<li class="fa-magic">Perform magic</li>
-										<li class="fa-book">Read books and stuff</li>
-										<li class="fa-film">Watch Films and TV shows</li>
-										<li class="fa-pencil">Write movie and drama scripts</li>
 										<li class="fa-cut">Video editing and VFX</li>
+										<li class="fa-book">Read Novels</li>
+										<li class="fa-film">Film Making</li>
+										<li class="fa-pencil">Write movie and drama scripts</li>
 									</ul>
 								</div>
 							</section>
@@ -63,15 +63,15 @@
 						<!-- Three -->
 							<section id="three">
 								<div class="container">
-									<h3>Some Of My Projects</h3>
+									<h3>Notable Projects</h3>
 									<p> Experience is the best teacher. Learning new stuff is easier and more interesting when we build as we learn. A few of my notable projects are described below. Please visit <a href = "https://www.github.com/jkeshav-bvignesh/"> my github profile</a> to see all my works.</p>
 									<div class="features">
 										<article>
 											<a href="#" class="image"><img src="images/Temperature.jpg" alt="" /></a>
 											<div class="inner">
-												<h4>Intelligent Room temperature control and monitoring System</h4>
+												<h4>Room temperature control and monitoring System using Deep Learning</h4>
 												<p align = "justify"><i>Tools Used: Python, SQLite, Raspberry Pi, HTML5, JQuery, Bootstrap, Flask</i><br>
-This system learns the user preferences, using a neural network and then predicts the optimal
+This system learns the user preferences, using Deep Learning Techinques and then predicts the optimal
 temperature. The user can change the preferences and monitor the system statistics using a website from
 any location</p>
 											</div>
@@ -79,7 +79,7 @@ any location</p>
 										<article>
 											<a href="#" class="image"><img src="images/tamil.jpg" alt="" /></a>
 											<div class="inner">
-												<h4>Tamil Handwritten Character Recognition</h4>
+												<h4>Tamil Handwritten Character Recognition using Deep Learning</h4>
 												<p align = "justify"><i>Tools Used: Python, TensorFlow, JQuery, Bootstrap, Flask</i><br>An interactive website wherein the user can write characters of the Tamil language. The website gives the recognition probabilities based on the character they have written using
 convolutional neural networks. The website can also be used to gather more training data from people who know the language</p>
 											</div>
