Added fyp details

--- a/index.html
+++ b/index.html
@@ -69,6 +69,15 @@
 										<article>
 											<a href="#" class="image"><img src="images/Temperature.jpg" alt="" /></a>
 											<div class="inner">
+												<h4>Personal Assistant for User Health Monitoring</h4>
+												<p align = "justify"><i>Website:<a href = "emotiondetectionfyp.wordpress.com"> emotiondetectionfyp.wordpress.com</a></i><br>
+This is my Final Year Capstone Project. We are exploring the possibility of using the inbuilt smartphone sensors and the smartphone usage to identify emotions like stress, anxiety and depression.
+				After Identification of emotions we also give personalised user alerts to help the user cope with the emotion. The website details our progress in achieving our goal. The work is still in progress and we update the website with all our latest findings</p>
+											</div>
+										</article>
+										<article>
+											<a href="#" class="image"><img src="images/Temperature.jpg" alt="" /></a>
+											<div class="inner">
 												<h4>Room temperature control and monitoring System using Deep Learning</h4>
 												<p align = "justify"><i>Tools Used: Python, SQLite, Raspberry Pi, HTML5, JQuery, Bootstrap, Flask</i><br>
 This system learns the user preferences, using Deep Learning Techinques and then predicts the optimal
