Added Capstone Project Details

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 									<p> Experience is the best teacher. Learning new stuff is easier and more interesting when we build as we learn. A few of my notable projects are described below. Please visit <a href = "https://www.github.com/jkeshav-bvignesh/"> my github profile</a> to see all my works.</p>
 									<div class="features">
 										<article>
-											<a href="#" class="image"><img src="images/Temperature.jpg" alt="" /></a>
+											<a href="#" class="image"><img src="images/phones.jpg" alt="" /></a>
 											<div class="inner">
 												<h4>Personal Assistant for User Health Monitoring</h4>
 												<p align = "justify"><i>Website:<a href = "emotiondetectionfyp.wordpress.com"> emotiondetectionfyp.wordpress.com</a></i><br>
