--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 											<a href="#" class="image"><img src="images/phones.jpg" alt="" /></a>
 											<div class="inner">
 												<h4>Personal Assistant for User Health Monitoring</h4>
-												<p align = "justify"><i>Website:<a href = "emotiondetectionfyp.wordpress.com"> emotiondetectionfyp.wordpress.com</a></i><br>
+												<p align = "justify"><i>Website:<a href = "https://emotiondetectionfyp.wordpress.com"> emotiondetectionfyp.wordpress.com</a></i><br>
 This is my Final Year Capstone Project. We are exploring the possibility of using the inbuilt smartphone sensors and the smartphone usage to identify emotions like stress, anxiety and depression.
 				After Identification of emotions we also give personalised user alerts to help the user cope with the emotion. The website details our progress in achieving our goal. The work is still in progress and we update the website with all our latest findings</p>
 											</div>
