Updated details about capstone project

--- a/index.html
+++ b/index.html
@@ -69,10 +69,9 @@
 										<article>
 											<a href="#" class="image"><img src="images/phones.jpg" alt="" /></a>
 											<div class="inner">
-												<h4>Personal Assistant for User Health Monitoring</h4>
-												<p align = "justify"><i>Website:<a href = "https://emotiondetectionfyp.wordpress.com"> emotiondetectionfyp.wordpress.com</a></i><br>
-This is my Final Year Capstone Project. We are exploring the possibility of using the inbuilt smartphone sensors and the smartphone usage to identify emotions like stress, anxiety and depression.
-				After Identification of emotions we also give personalised user alerts to help the user cope with the emotion. The website details our progress in achieving our goal. The work is still in progress and we update the website with all our latest findings</p>
+												<h4>AI Powered Chessboard</h4>
+												<p align = "justify"><i>Website:<a href = "https://vitcapstoneproject.wordpress.com/"> vitcapstoneproject.wordpress.com/</a></i><br>
+This is my Final Year Capstone Project. The project involves designing a cost effective prototype for a chessboard that the user can play against. Unlike existing pick and place chess playing robots, the prototype was designed to be a single portable unit with no visible mechanisms that move chess pieces. Everything is taken care of under the hood. Thus it doesn't ruin the feel of a chessboard for a player. The website discusses the various issues involved and mechanisms and prototypes designed to achieve the goal.</p>
 											</div>
 										</article>
 										<article>
