Updated things I can do

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 										<li class="fa-code">Write code</li>
 										<li class="fa-magic">Perform magic</li>
 										<li class="fa-cut">Video editing and VFX</li>
-										<li class="fa-book">Read Novels</li>
+										<li class="fa-cogs">Design Robots</li>
 										<li class="fa-film">Film Making</li>
 										<li class="fa-pencil">Write movie and drama scripts</li>
 									</ul>
