Updated Things I can do

--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
 									<h3>Things I Can Do</h3>
 									<ul class="feature-icons">
 										<li class="fa-code">Write code</li>
+										<li class="fa-cogs">Design Hardware Prototypes</li>>
 										<li class="fa-magic">Perform magic</li>
 										<li class="fa-cut">Video editing and VFX</li>
-										<li class="fa-cogs">Design Robots</li>
 										<li class="fa-film">Film Making</li>
 										<li class="fa-pencil">Write movie and drama scripts</li>
 									</ul>
