--- a/index.html
+++ b/index.html
@@ -41,7 +41,11 @@
 										<p>Welcome to my page!<br />
 										</p>
 									</header>
-									<p align = "justify">I am currently pursuing my <b>Bachelor's degree</b> in <b>Computer Science at Vellore Institute of Technology</b>. Being a Bio-maths student, the science behind computers was very new to me. However, over the past few years of my college life, I gradually started to understand it and became passionate towards the subject. I am currently looking for good opportunities in the fields of Software Development, Machine Learning and AI which would help me improve my skills to an advanced level so that it can be used in solving real world problems.<br> Other than computer science I am also passionate about performing magic and being involved in films. I have been performing magic for over ten years. I directed one short film and have worked as the script writer in many individual projects. I have also worked as a VFX/Graphics Designer and am proficient in skills involving video editing.</p>
+									<p align = "justify">I currently work as the Hardware/Software Integration Engineer in the Autonomous Robots Research Team (Smart Devices) at CTO, Wipro Limited. I primarily work with the Robot Operating System (ROS) and supporting software including Gazebo, Moveit! and RViz. I also design robot simulation environments to aid software development and testing. 
+
+I graduated with a Bachelor's degree in Computer Science and Technology from Vellore Institute of Technology in 2018. During this period, I had designed and developed a few robot prototypes including an AI powered Chessboard. I have worked in several projects in the fields of Artificial Intelligence, Machine Learning and Game Theory.
+
+Other than computer science I am also passionate about performing magic and being involved in films.I directed one short film and have worked as the script writer in many individual projects. I have also worked as a VFX/Graphics Designer and am proficient in skills involving video editing.</p>
 								</div>
 							</section>
 
