--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 										<p>Welcome to my page!<br />
 										</p>
 									</header>
-									<p align = "justify">I currently work as the Hardware/Software Integration Engineer in the Autonomous Robots Research Team (Smart Devices) at CTO, Wipro Limited. I primarily work with the Robot Operating System (ROS) and supporting software including Gazebo, Moveit! and RViz. I also design robot simulation environments to aid software development and testing.<br />
+									<p align = "justify">I currently work as a Software Development Engineer in the Autonomous Robots Research Team (Smart Devices) at CTO, Wipro Limited. I am currently involved in the design and development of scalable and configurable robotic software modules. I primarily code in Python and mostly work with the Robot Operating System (ROS) and supporting software including Gazebo, Moveit! and RViz. I also design robot simulation environments to aid software development and testing.<br />
 I graduated with a Bachelor's degree in Computer Science and Technology from Vellore Institute of Technology in 2018. During this period, I had designed and developed a few robot prototypes including an AI powered Chessboard. I have worked in several projects in the fields of Artificial Intelligence, Machine Learning and Game Theory.<br />
 Other than computer science I am also passionate about performing magic and being involved in films.I directed one short film and have worked as the script writer in many individual projects. I have also worked as a VFX/Graphics Designer and am proficient in skills involving video editing.</p>
 								</div>
