Added a Jekyll based blog

--- a/index.html
+++ b/index.html
@@ -1,138 +1,9 @@
-<!DOCTYPE HTML>
-<html>
-	<head>
-		<title>J Keshav Bhupathy Vignesh</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
-	</head>
-	<body>
-
-		<!-- Header -->
-			<section id="header">
-				<header>
-					<span class="image avatar"><img src="images/newprofilepic.png" alt="" /></span>
-					<h1 id="logo"><a href="#">J Keshav Bhupathy Vignesh</a></h1>
-					</header>
-				<nav id="nav">
-					<ul>
-						<li><a href="#one" class="active">About</a></li>
-						<li><a href="#two">Things I Can Do</a></li>
-						<li><a href="#three">Some Of My Projects</a></li>
-						<li><a href="#four">Contact</a></li>
-						<li><a href="/CV/J_Keshav_Bhupathy_Vignesh_Resume.pdf" download>Download my Resume</a></li>
-					</ul>
-				</nav>
-			</section>
-
-		<!-- Wrapper -->
-			<div id="wrapper">
-
-				<!-- Main -->
-					<div id="main">
-
-						<!-- One -->
-							<section id="one">
-								<div class="container">
-									<header class="major">
-										<h2>Hello! I'm Keshav</h2>
-										<p>Welcome to my page!<br />
-										</p>
-									</header>
-									<p align = "justify">I currently work as a Software Development Engineer in the Autonomous Robots Research Team (Smart Devices) at CTO, Wipro Limited. I am currently involved in the design and development of scalable and configurable robotic software modules. I primarily code in Python and mostly work with the Robot Operating System (ROS) and supporting software including Gazebo, Moveit! and RViz. I also design robot simulation environments to aid software development and testing. <a href="/CV/J_Keshav_Bhupathy_Vignesh_Resume.pdf" download>Click Here to Download my Resume</a><br />
-I graduated with a Bachelor's degree in Computer Science and Technology from Vellore Institute of Technology in 2018. During this period, I had designed and developed a few robot prototypes including an AI powered Chessboard. I have worked in several projects in the fields of Artificial Intelligence, Machine Learning and Game Theory.<br />
-Other than computer science I am also passionate about performing magic and being involved in films.I directed one short film and have worked as the script writer in many individual projects. I have also worked as a VFX/Graphics Designer and am proficient in skills involving video editing.</p>
-								</div>
-							</section>
-
-						<!-- Two -->
-							<section id="two">
-								<div class="container">
-									<h3>Things I Can Do</h3>
-									<ul class="feature-icons">
-										<li class="fa-code">Write code</li>
-										<li class="fa-cogs">Design Hardware Prototypes</li>>
-										<li class="fa-magic">Perform magic</li>
-										<li class="fa-cut">Video editing and VFX</li>
-										<li class="fa-film">Film Making</li>
-										<li class="fa-pencil">Write movie and drama scripts</li>
-									</ul>
-								</div>
-							</section>
-
-						<!-- Three -->
-							<section id="three">
-								<div class="container">
-									<h3>Notable Projects</h3>
-									<p> Experience is the best teacher. Learning new stuff is easier and more interesting when we build as we learn. A few of my notable projects are described below. Please visit <a href = "https://www.github.com/jkeshav-bvignesh/"> my github profile</a> to see all my works.</p>
-									<div class="features">
-										<article>
-											<a href="#" class="image"><img src="images/phones.jpg" alt="" /></a>
-											<div class="inner">
-												<h4>AI Powered Chessboard</h4>
-												<p align = "justify"><i>Website:<a href = "https://vitcapstoneproject.wordpress.com/"> vitcapstoneproject.wordpress.com/</a></i><br>
-This is my Final Year Capstone Project. The project involves designing a cost effective prototype for a chessboard that the user can play against. Unlike existing pick and place chess playing robots, the prototype was designed to be a single portable unit with no visible mechanisms that move chess pieces. Everything is taken care of under the hood. Thus it doesn't ruin the feel of a chessboard for a player. The website discusses the various issues involved and mechanisms and prototypes designed to achieve the goal.</p>
-											</div>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="images/Temperature.jpg" alt="" /></a>
-											<div class="inner">
-												<h4>Room temperature control and monitoring System using Deep Learning</h4>
-												<p align = "justify"><i>Tools Used: Python, SQLite, Raspberry Pi, HTML5, JQuery, Bootstrap, Flask</i><br>
-This system learns the user preferences, using Deep Learning Techinques and then predicts the optimal
-temperature. The user can change the preferences and monitor the system statistics using a website from
-any location</p>
-											</div>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="images/tamil.jpg" alt="" /></a>
-											<div class="inner">
-												<h4>Tamil Handwritten Character Recognition using Deep Learning</h4>
-												<p align = "justify"><i>Tools Used: Python, TensorFlow, JQuery, Bootstrap, Flask</i><br>An interactive website wherein the user can write characters of the Tamil language. The website gives the recognition probabilities based on the character they have written using
-convolutional neural networks. The website can also be used to gather more training data from people who know the language</p>
-											</div>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="images/network.jpg" alt="" /></a>
-											<div class="inner">
-												<h4>A game theoretical approach to solve Network Congestion</h4>
-												<p align = "justify"><i>Tools Used: C++, NS2</i><br>A game theoretical approach is proposed to resolve network congestion among competing flows. An optimal and fixed congestion window size is allocated to each node in the network at the end
-of the game.</p>
-											</div>
-										</article>
-									</div>
-								</div>
-							</section>
-
-						<!-- Four -->
-							<section id="four">
-								<div class="container">
-									<h3>Contact Me</h3>
-									<p>Feel free to contact me anytime.<br>My email id: <b><a href="mailto:jkeshav.bvignesh@gmail.com">jkeshav.bvignesh@gmail.com</a></b><br> My Skype Id is also the same!<br><h4>You can also find me here <a href="https://www.facebook.com/people/Keshav-Vignesh/100005469136863" class="icon fa-facebook"><span class="label">Facebook</span></a>
-<a href="https://www.github.com/jkeshav-bvignesh" class="icon fa-github"><span class="label">Github</span></a>
-<a href="https://twitter.com/keshav_vignesh" class="icon fa-twitter"><span class="label">Twitter</span><a>
-	<a href="https://www.linkedin.com/in/jkeshav-bvignesh/" class="icon fa-linkedin-square"><span class="label">LinkedIn</span><a></h4></p>
-									
-					<section id="footer">
-						<div class="container">
-							<ul class="copyright">
-								<li>&copy; J Keshav Bhupathy Vignesh. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-
-						</div>
-					</section>
-
-			</div>
-
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrollzer.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/skel.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
-			<script src="assets/js/main.js"></script>
-
-	</body>
-</html>
+---
+feature_text: |
+  ## J. Keshav Bhupathy Vignesh
+  Developer. Designer. Python. ROS
+feature_image: "https://picsum.photos/1300/400?image=989"
+excerpt: "blog index"
+layout: blog
+aside: true
+---
